# FUUU_api

./: .gitignore  Makefile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml
src/: main.py
src/app/user/: dependencies.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/app/user/auth/: dependencies.py  (+4 more)
src/apps/: exceptions.py  services.py
src/apps/meme/: __init__.py  exceptions.py  maker.py  routers.py  schemas.py
src/apps/user/: __init__.py  models.py  routers.py  schemas.py  services.py
src/core/: admin.py  constants.py  exceptions.py  lifespan.py  setup.py
src/core/cache/: __init__.py  redis.py
src/core/config/: __init__.py  database.py  mount.py  redis.py  run.py  settings_root.py
src/core/db/: __init__.py  base.py  repositories.py  sidekick.py
src/migrations/: env.py
src/migrations/versions/: 2024_07_06_1458-b2e0b92c3c2a_create_users_table.py
src/scripts/: app.sh
src/tests/: conftest.py
src/tests/builders/: __init__.py  meme.py  template.py  tg_user.py
src/tests/test_auth/: test_endpoints.py
src/tests/test_meme/: conftest.py  test_endpoints.py
src/tests/test_meme_templates/: conftest.py  test_endpoints.py
src/tests/test_tg_user/: test_endpoints.py
src/tests/test_user/: test_endpoints.py
src/tests/test_user_admin/: conftest.py  test_endpoints.py
src/tests/test_user_templates/: conftest.py  test_endpoints.py
src/user/: __init__.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
tests/: conftest.py
tests/user/: test_endpoints.py
(+31 files in other folders)
