[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
uvicorn-worker = "^0.2.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
gunicorn = "^22.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
